--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Personal Resume</title>
-        <link rel="stylesheet" href="../CSS/style.css">
+        <link rel="stylesheet" href="style.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -104,7 +104,7 @@
                     <!-- Transportation Company Project -->
                     <div class="col-lg-5 col-md-6 col-12">
                         <div class="card">
-                            <img src="../Image/Transportation_Company.png" class="card-img-top" alt="Transportation Company Project">
+                            <img src="Transportation_Company.png" class="card-img-top" alt="Transportation Company Project">
                             <div class="card-body">
                                 <h5 class="card-title">Transportation Company</h5>
                                 <p class="card-text">A database management system optimizing logistics operations such as bookings, tracking, and warehouse management to improve efficiency and reliability.</p>
@@ -116,7 +116,7 @@
                     <!-- CoHabit Application Project -->
                     <div class="col-lg-5 col-md-6 col-12">
                         <div class="card">
-                            <img src="../Image/cohabit.png" class="card-img-top" alt="CoHabit Application Project">
+                            <img src="cohabit.png" class="card-img-top" alt="CoHabit Application Project">
                             <div class="card-body">
                                 <h5 class="card-title">CoHabit Application</h5>
                                 <p class="card-text">A social-driven habit-building application integrating community engagement, gamification, and AI-driven personalization to enhance motivation and accountability.</p>
