--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
 
             <div class="img">
-                <img src="../Image/photo3.png" alt="Me">
+                <img src="photo3.png" alt="Me">
             </div>
         </section>
 
